--- a/solutions.html
+++ b/solutions.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jquery-mobile-theme/themes/customized.min.css" />
 <link rel="stylesheet" href="jquery-mobile-theme/themes/jquery.mobile.icons.min.css" />
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script><!--jQuery link-->
-<script type="text/javascript" src="../scripts/jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script><!--jQuery Mobile JS-->
+<script type="text/javascript" src="scripts/jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script><!--jQuery Mobile JS-->
 </head>
 <body> 
 <section data-role="page">
